style.css
@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat&family=Roboto:wght@400;700&display=swap');

:root {
    --main-color: rgba(0, 0, 0, 0.85);
    --dark-bg-font-color: rgb(238, 235, 228);
}

* { 
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.container {
    display: grid;
    grid-template: minmax(200px, 1fr) 4fr / 1fr 3fr;
    grid-template-areas: "sidebar header"
                         "sidebar content";
    height: 100vh;
    width: 100vw;
}

.sidebar {
    grid-area: sidebar; 
    background: var(--main-color);
}

.content {
    background: rgb(235, 235, 235);
}

h1 {
    color: var(--dark-bg-font-color);
}

.sidebar path {
    fill: var(--dark-bg-font-color);
}

.sidebar {
    display: grid;
    grid-template-rows: 100px repeat(9, min-content);
    gap: 10px;
    padding-bottom: 24px;
}

.sidebar > div:not(:first-of-type) {
    font-family: 'Montserrat', sans-serif;
}

.sidebar a:hover {
    cursor: pointer;
}

.sidebar > div {
    display: grid;
    grid-template-columns: auto 1fr;
    align-items: center;
    gap: 20px;
    margin: 0 0 0 25px;
}

.sidebar-title {
    font-family: "Lobster", sans-serif;
    font-size: 22px;
}

.sidebar > .sidebar-title {
    gap: 5px;
    margin: 0 10px 0 10px;
}

.sidebar > .link-settings {
    align-items: end;
}

.sidebar > div > h2 > a {
    text-decoration: none;
    color: var(--dark-bg-font-color);
}

.sidebar > div > h2 > a:hover {
    color: grey;
}

.header {
    display: grid;
    grid-template: 1fr 1fr / minmax(max-content, 2fr) 1fr;
    grid-template-areas: "searchbar user-info"
                         "greeting buttons";
    justify-items: center;
    align-items: center;
    padding: 0 30px 0 30px;
    background: white;
    box-shadow: 0px 1px 5px grey;
    position: relative;
    z-index: 1;
}


.searchbar {
    display: grid;
    grid-template: min-content / auto 1fr;
    gap: 10px;
    width: 100%;
}

#search {
    border-radius: 20px;
    border: black 2px solid;
    background:rgb(235, 235, 235);
    max-width: 700px;
    padding-left: 5px;
}

.header .user-info {
    display: grid;
    align-items: center;
    grid-template-columns: auto auto 1fr;
    gap: 22px;
    margin-left: 1vw;
    justify-self: right;
}

.user-info > *:hover {
    cursor: pointer;
}

.user-avatar {
    height: 42px;
    width: 42px;
    border: 2px solid black;
    border-radius: 50%;
}

.header, .content, .greeting {
    font-family: "Roboto", sans-serif;
}

.user-name {
    font-size: 18px;
    font-weight: bold;
}

.greeting {
    display: grid;
    grid-template: auto auto / auto 1fr;
    grid-template-areas: "avatar greeting"
                         "avatar username";
    height: 100%;
    width: 100%;
    column-gap: 15px;
    grid-area: greeting;
}

.greeting img {
    height: 80%;
    width: auto;
    grid-area: avatar;
    border: 2px solid black;
    border-radius: 50%;
}

.greeting p:first-of-type {
    grid-area: greeting;
    align-self: center;
    font-size: 12px;
    font-weight: bold;
}

.greeting p:nth-of-type(2) {
    grid-area: username;
    font-weight: bold;
    font-size: 24px;
}

.header .buttons {
    display: grid;
    grid-template: min-content / auto auto auto;
    gap: 20px;
    height: 100%;
    align-content: center;
    grid-area: buttons;
    gap: 2vw;
    justify-self: right;
}

button {
    background: var(--main-color);
    color: var(--dark-bg-font-color);
    border: none;
    border-radius: 24px;
    padding: 10px 16px;
    font-size: 18px;
}

button:hover {
    cursor: pointer;
    background-color: white;
    color: var(--main-color);
    box-shadow: 1px 1px 2px var(--main-color);
}

.content {
    display: grid;
    grid-template: 1fr 1fr / 3fr 1fr; 
    grid-template-areas: "projects announcements-trending"
                         "projects announcements-trending";
    gap: 20px;
    padding: 20px 15px 50px;
}

.projects {
    grid-area: projects;
    display: grid;
    grid-template: min-content 1fr / 1fr 1fr;
    grid-template-areas: "heading heading"
                         "cardcontainer cardcontainer";
    row-gap: 16px;
}

.projects-heading, .announcements-heading, .trending-heading {
    font-size: 20px;
    font-weight: bold;
    grid-area: heading;
}

.card-container {
    grid-area: cardcontainer;
    display: grid;
    grid-template: 250px 250px / repeat(auto-fill, minmax(400px, 1fr));
    grid-auto-rows: 250px;
    gap: 32px;
}

.card {
    background: white;
    border-radius: 16px;
    border-left: 10px solid orange;
    padding: 20px;
    display: grid;
    grid-template-rows: min-content 1fr min-content;
    gap: 10px;
}

.announcements-trending-container {
    display: grid;
    grid-area: announcements-trending;
    grid-template: min-content min-content / 300px;
    grid-template-areas: "announcements"
                         "trending";
    gap: 16px;
}

.announcements {
    grid-area: announcements;
    display: grid;
    grid-template: min-content 400px / 1fr;
    grid-template-areas: "heading"
                         "content";
    gap: 16px;
}

.announcements-heading {
    grid-area: heading;
}

.announcements-content, .trending-content {
    background: white;
    grid-area: content;
    border-radius: 16px;
}

.trending {
    grid-area: trending;
    display: grid;
    grid-template: min-content 355px / 1fr;
    grid-template-areas: "heading"
                         "content";
    gap: 16px;
}

.trending-heading {
    grid-area: heading;
}

.trending-content {
    grid-area: content;
}

